Fix flex align items value

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,7 @@
     margin-bottom: 12px;
     gap: inherit;
     justify-content: space-between;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .Header-logo-container {
